force-app/main/default/objects/Keyword__mdt/Keyword__mdt.object-meta.xml
<CustomObject>
    <label>Keyword</label>
    <pluralLabel>Keywords</pluralLabel>
</CustomObject>