force-app/main/default/objects/Keyword__mdt/fields/KeywordList__c.field-meta.xml
<CustomField>
    <fullName>KeywordList__c</fullName>
    <label>KeywordList</label>
    <type>TextArea</type>
</CustomField>