force-app/main/default/objects/Keyword__mdt/fields/Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Email__c</fullName>
    <label>Service Email</label>
    <type>Email</type>
</CustomField>