force-app/main/default/objects/Keyword__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority</fullName>
                <default>true</default>
                <label>Priority</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>